mon: avoid daemons crashing with mal-formatted cmd input(1/2) this is one of couple commits of code strngthing effort. code under src/common and src/messages get reviewed/changed to make sure all cmd_getval stuff are running safe with this commit. bug to fix:https://tracker.ceph.com/issues/57890 related bug: https://tracker.ceph.com/issues/54558

Signed-off-by: Ben Gao <bengao168@msn.com>